make sure crypto name is lowercase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coincap-mcp",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "author": {
     "name": "Alex Andru",
     "email": "alex007d@gmail.com"
@@ -17,7 +17,7 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "tsc && chmod +x build/index.js",
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
